generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

enum ListingStatus {
    AVAILABLE
    RESERVED
    WAITING_FOR_PAYMENT
    PAID
    WAITING_FOR_PICKUP
    SENT
    RECEIVED
    RATED
    SOLD
}

enum ListingCondition {
    NEW
    LIKE_NEW
    GOOD
    FAIR
    POOR
}

enum SellerConnectStatus {
    NONE
    PENDING
    ACTIVE
    RESTRICTED
    REJECTED
}

enum PaymentStatus {
    REQUIRES_PAYMENT_METHOD
    REQUIRES_ACTION
    PROCESSING
    REQUIRES_CAPTURE
    SUCCEEDED
    CANCELED
    FAILED
    REFUNDED
    PARTIALLY_REFUNDED
}

enum RefundStatus {
    PENDING
    SUCCEEDED
    FAILED
}

model User {
    id            String         @id @default(cuid())
    studentId     String?        @unique
    email         String         @unique
    displayName   String
    avatarUrl     String?
    lineId        String?
    instagram     String?
    facebookUrl   String?
    passwordHash  String
    createdAt     DateTime       @default(now())
    updatedAt     DateTime       @updatedAt
    listings      Listing[]      @relation("SellerListings")
    buyerListings Listing[]      @relation("BuyerListings")
    refreshTokens RefreshToken[]
    reviewsWritten Review[]       @relation("ReviewerReviews")
    reviewsReceived Review[]      @relation("SellerReviews")
    carts         Cart[]
    sellerProfile    SellerProfile?
    paymentsAsBuyer  Payment[]      @relation("BuyerPayments")
    paymentsAsSeller Payment[]      @relation("SellerPayments")
}

model Category {
    id        String    @id @default(cuid())
    name      String
    slug      String    @unique
    createdAt DateTime  @default(now())
    updatedAt DateTime  @updatedAt
    listings  Listing[]
}

model PickupLocation {
    id          String    @id @default(cuid())
    name        String
    building    String
    description String?
    createdAt   DateTime  @default(now())
    updatedAt   DateTime  @updatedAt
    listings    Listing[]
}

model Listing {
    id               String           @id @default(cuid())
    sellerId         String
    buyerId          String?
    title            String
    description      String
    price            Int
    isFree           Boolean          @default(false)
    status           ListingStatus    @default(AVAILABLE)
    condition        ListingCondition @default(GOOD)
    courseCode       String?
    categoryId       String?
    pickupLocationId String?
    images           String[]
    currentPaymentIntentId String?
    createdAt        DateTime         @default(now())
    updatedAt        DateTime         @updatedAt
    seller           User             @relation("SellerListings", fields: [sellerId], references: [id], onDelete: Cascade)
    buyer            User?            @relation("BuyerListings", fields: [buyerId], references: [id], onDelete: SetNull)
    category         Category?        @relation(fields: [categoryId], references: [id], onDelete: SetNull)
    pickupLocation   PickupLocation?  @relation(fields: [pickupLocationId], references: [id], onDelete: SetNull)
    reviews          Review[]
    cartItems        CartItem[]
    payments         Payment[]

    @@index([sellerId])
    @@index([buyerId])
    @@index([status])
    @@index([courseCode])
    @@index([currentPaymentIntentId])
}

model SellerProfile {
    id                         String              @id @default(cuid())
    userId                     String              @unique
    stripeConnectAccountId     String?             @unique
    connectStatus              SellerConnectStatus @default(NONE)
    chargesEnabled             Boolean             @default(false)
    payoutsEnabled             Boolean             @default(false)
    detailsSubmitted           Boolean             @default(false)
    requirementsDisabledReason String?
    requirementsCurrentlyDue   String[]
    defaultPayoutCurrency      String              @default("thb")
    totalEarnedSatang          BigInt              @default(0)
    totalPaidOutSatang         BigInt              @default(0)
    createdAt                  DateTime            @default(now())
    updatedAt                  DateTime            @updatedAt
    user                       User                @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Payment {
    id                     String        @id @default(cuid())
    buyerId                String
    sellerId               String
    listingId              String
    stripePaymentIntentId  String        @unique
    stripeChargeId         String?
    stripeApplicationFeeId String?
    stripeTransferId       String?
    amountSatang           Int
    platformFeeSatang      Int
    sellerNetSatang        Int
    currency               String        @default("thb")
    status                 PaymentStatus @default(REQUIRES_PAYMENT_METHOD)
    paymentMethodType      String?
    captureMethod          String        @default("manual")
    capturedAt             DateTime?
    succeededAt            DateTime?
    canceledAt             DateTime?
    failureCode            String?
    failureMessage         String?
    metadata               Json?
    createdAt              DateTime      @default(now())
    updatedAt              DateTime      @updatedAt
    buyer                  User          @relation("BuyerPayments", fields: [buyerId], references: [id], onDelete: Cascade)
    seller                 User          @relation("SellerPayments", fields: [sellerId], references: [id], onDelete: Cascade)
    listing                Listing       @relation(fields: [listingId], references: [id], onDelete: Cascade)
    refunds                Refund[]

    @@index([buyerId])
    @@index([sellerId])
    @@index([listingId])
    @@index([status])
}

model Refund {
    id                   String       @id @default(cuid())
    paymentId            String
    stripeRefundId       String       @unique
    amountSatang         Int
    reason               String?
    status               RefundStatus @default(PENDING)
    reverseTransfer      Boolean      @default(false)
    refundApplicationFee Boolean      @default(false)
    createdAt            DateTime     @default(now())
    payment              Payment      @relation(fields: [paymentId], references: [id], onDelete: Cascade)

    @@index([paymentId])
}

model StripeWebhookEvent {
    id          String   @id
    type        String
    payload     Json
    processedAt DateTime @default(now())

    @@index([type])
}

model RefreshToken {
    id        String   @id @default(cuid())
    token     String   @unique
    userId    String
    expiresAt DateTime
    createdAt DateTime @default(now())
    user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@index([userId])
}

model Cart {
    id        String     @id @default(cuid())
    userId    String
    createdAt DateTime   @default(now())
    updatedAt DateTime   @updatedAt
    user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
    items     CartItem[]

    @@unique([userId])
}

model CartItem {
    id        String   @id @default(cuid())
    cartId    String
    listingId String
    quantity  Int      @default(1)
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt
    cart      Cart     @relation(fields: [cartId], references: [id], onDelete: Cascade)
    listing   Listing  @relation(fields: [listingId], references: [id], onDelete: Cascade)

    @@unique([cartId, listingId])
    @@index([listingId])
}

model Review {
    id         String   @id @default(cuid())
    listingId  String
    sellerId   String
    reviewerId String
    rating     Int
    comment    String?
    createdAt  DateTime @default(now())
    updatedAt  DateTime @updatedAt
    listing    Listing  @relation(fields: [listingId], references: [id], onDelete: Cascade)
    seller     User     @relation("SellerReviews", fields: [sellerId], references: [id], onDelete: Cascade)
    reviewer   User     @relation("ReviewerReviews", fields: [reviewerId], references: [id], onDelete: Cascade)

    @@unique([listingId, reviewerId])
    @@index([sellerId])
}
